# openvino-plugins-ai-audacity

./: .gitignore  CONTRIBUTING.md  README.md  install.sh
.github/workflows/: build.yml
doc/build_doc/linux/: README.md  debian12_installation.md
doc/build_doc/windows/: README.md
doc/feature_doc/music_generation/: README.md
doc/feature_doc/music_separation/: README.md
doc/feature_doc/music_style_remix/: README.md
doc/feature_doc/noise_suppression/: README.md
doc/feature_doc/super_resolution/: README.md
doc/feature_doc/whisper_transcription/: README.md
mod-openvino/: CMakeLists.txt  OVAudioSR.cpp  OVAudioSR.h  OVModelManager.cpp  OVModelManager.h  OVModelManagerPopulation.cpp  OVModelManagerUI.cpp  OVModelManagerUI.h  OVMusicGeneration.cpp  OVMusicGeneration.h  OVMusicGenerationLLM.cpp  OVMusicGenerationLLM.h  OVMusicGenerationV2.cpp  OVMusicGenerationV2.h  OVMusicSeparation.cpp  OVMusicSeparation.h  OVMusicStyleRemix.cpp  OVMusicStyleRemix.h  OVNoiseSuppression.cpp  OVNoiseSuppression.h  OVStringUtils.h  OVWhisperTranscription.cpp  OVWhisperTranscription.h  OVWhisperTranscriptionGenAI.cpp  OVWhisperTranscriptionGenAI.h  OpenVINO.cpp  htdemucs.cpp  htdemucs.h
mod-openvino/audio_sr/: audio_sr.cpp  audio_sr.h  audiosr_common.h  autoencoder.cpp  autoencoder.h  biquad.cpp  biquad.h  ddim_sampler.cpp  ddim_sampler.h  ddpm_latent_diffusion.cpp  ddpm_latent_diffusion.h  distributions.h
mod-openvino/ittutils/: ittutils.h
mod-openvino/musicgen/: CMakeLists.txt  encodec_encoder.h  music_gen_decoder_cl.cpp  music_gen_decoder_cl.h  music_gen_decoder_full_batch1.h  music_gen_decoder_full_batch2.h  musicgen.cpp  musicgen.h  musicgen_config.h  musicgen_decoder.cpp  musicgen_decoder.h  musicgen_decoder_model.h  musicgen_for_causal_lm.cpp  musicgen_for_causal_lm.h  musicgen_for_conditional_generation.cpp  musicgen_for_conditional_generation.h  musicgen_for_conditional_generation_refactor.cpp  musicgen_for_conditional_generation_refactor.h  musicgen_model_static.cpp  musicgen_model_static.h  musicgen_utils.h  static_kv_cache_manager_cl.cpp  static_kv_cache_manager_cl.h
mod-openvino/noise_suppression/: noise_suppression_df_model.cpp  noise_suppression_df_model.h  noise_suppression_model.h  noise_suppression_omz_model.cpp  noise_suppression_omz_model.h
mod-openvino/noise_suppression/deepfilternet/: deepfilter.cpp  deepfilter.h  dfnet.h  dfnet_model.cpp  dfnet_model.h  multiframe.cpp  multiframe.h
tools/windows/: LICENSE_text.txt  README.md  add_ov_module.patch  audacity_ai_plugins.iss  audacity_no_vc_runtime_install.patch  build.bat  fetch_build_package.bat  package.bat  prereq.bat  set_env.bat
